# NuToApps

./: ..gitignore.un~  .gitignore
MyNuToAdditions/src/: CMakeLists.txt  ConstraintOrdering.cpp  Coordinates.cpp  ExtendedMesh.h  ExtendedMeshTest.cpp  MeshTopology.cpp  ParallelAssembly.cpp  Plot.cpp  createCellsBenchmark.cpp  mwe.cpp  rectangle10x10.msh
MyPDE/src/: CMakeLists.txt  CMakeLists.txt.user.8a17031  CoordinateSystem.h  Coordinates.cpp  CylindricalCoordinates.h  ElasticityDiskDynamic.cpp  ElasticityLShapedDomain.cpp  ElasticityPlateTiltedCrack.cpp  ElasticityRectangleDynamic.cpp  ElasticityRectangleTiltedCrack.cpp  Electrostatics.cpp  GeometryInformation.cpp  HelmholtzRectangle.cpp  Interpolation1DTests.cpp  InterpolationHierarchical.cpp  InterpolationTrigonometricTest.cpp  LaplaceAnnulus.cpp  LaplaceCircle.cpp  LaplaceLine.cpp  LaplacePolarCoordinates.cpp  LaplaceRectangle.cpp  LocalCoordinatesFromGlobal.cpp  MaterialConstants.h  MyLagrangeShapes.h  OrthonormalCoordinateSystem.h  PiezoelectricDisk.cpp  Poisson2D.cpp  PoissonCube.cpp  PoissonLine.cpp  PoissonRectangle.cpp  PoissonTypeEquations.cpp  PolarCoordinates.h  SimplexShapes.cpp  SphericalCoordinates.h  TestNormal.cpp  VTKStuff.cpp  Wave1DTests.cpp  Wave2D.cpp  WaveLine.cpp  WaveRectangle.cpp  (+12 more)
MyTimeIntegration/: BDF.hpp  CMakeLists.txt  ExplicitNystroem.h  ExplicitNystroemNoVelocity.h  HarmonicOscillator.h  ImplicitEuler.hpp  MyTestExplicitMethods.cpp  MyTestImplicitMethods.cpp  NY4NoVelocity.h  NY5NoVelocity.h  NYVelocityVerlet.h  Newmark.hpp  RK4Nystroem.h  RK4NystroemNoVelocity.h
NuToHelpers/: BoostOdeintEigenSupport.h  ConstraintsHelper.h  InterpolationQuadHierarchical.h  InterpolationTrussHierarchical.h  InterpolationTrussTrigonometric.h  MeshValuesTools.h  MyDifferentialOperators.h  NiceLookingFunctions.h  Piezoelectricity.h  PoissonTypeProblem.h  VisualizeTools.h
ScaledBoundaryFEM/data/E0-Z0_newNumbering/: 16_linear_element_E0.txt  16_linear_element_E1.txt  16_linear_element_E2.txt  16_linear_element_M0.txt  16_linear_element_Z0.txt  16_quadratic_element_E0.txt  16_quadratic_element_E1.txt  16_quadratic_element_E2.txt  16_quadratic_element_M0.txt  16_quadratic_element_Z0.txt  1_linear_element_E0.txt  1_linear_element_E1.txt  1_linear_element_E2.txt  1_linear_element_M0.txt  1_linear_element_Z0.txt  1_quadratic_element_E0.txt  1_quadratic_element_E1.txt  1_quadratic_element_E2.txt  1_quadratic_element_M0.txt  1_quadratic_element_Z0.txt
ScaledBoundaryFEM/data/E0-Z0_oldNumbering/: 16_linear_element_E0.txt  16_linear_element_E1.txt  16_linear_element_E2.txt  16_linear_element_M0.txt  16_linear_element_Z0.txt  16_quadratic_element_Z0.txt  16_quatratic_element_E0.txt  16_quatratic_element_E1.txt  16_quatratic_element_E2.txt  16_quatratic_element_M0.txt  1_linear_element_E0.txt  1_linear_element_E1.txt  1_linear_element_E2.txt  1_linear_element_M0.txt  1_linear_element_Z0.txt  1_quadratic_element_Z0.txt  1_quatratic_element_E0.txt  1_quatratic_element_E1.txt  1_quatratic_element_E2.txt  1_quatratic_element_M0.txt
ScaledBoundaryFEM/src/: .Test.cpp.un~  CMakeLists.txt  Test.cpp
Waves/src/: AssemblyBenchmark.cpp  CMakeLists.txt  Crack2D_2.msh  Crack3D_angle00_h1.msh  Crack3D_angle00_h1_2ndOrder.msh  Crack3D_angle00_h2.msh  Crack3D_angle45_h1.msh  Crack3D_angle45_h1_2ndOrder.msh  Crack3D_angle45_h2.msh  Crack3D_angle45_h2_2ndOrder.msh  Crack3D_angle90_h1.msh  Crack3D_angle90_h1_2ndOrder.msh  Crack3D_angle90_h2.msh  Elasticity2DWithLoadedEllipticalHole.cpp  Elasticity3DWithLoadedSphereSegementHole.cpp  ElasticityCrackOpening2D.cpp  ElasticityCrackOpening3D.cpp  ElasticityCrackOpening3D_00.cpp  ElasticityCrackOpening3D_45.cpp  ElasticityCrackOpening3D_90.cpp  ElasticityRectangle.cpp  ElasticityTiltedCrackOpening2D.cpp  GenerateReferenceMatrices.cpp  PointForce3D.cpp  ScalarWaveEquation.cpp  ScalarWaveEquation.h  Wave1D.cpp  WaveLine.cpp  WaveRectangle.cpp  WaveRectangleWithLoadedEllipticalHole.cpp  cube20x20x20.msh  mytest.cpp  plateH1_angle45_L0.4.msh  plateH2_angle45_L0.4small.msh  plateH2_angle45_L0.4smallLinear.msh
Waves/src/Meshes/: Crack2D_1.msh  plateH0.75_angle45_L0.4small.msh  plateH2_angle45_L0.4.msh
